backend phase 2 completed

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -29,7 +29,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "app/admin/courses/page.jsx", "app/admin/team/page.jsx"  ],
   "exclude": [
     "node_modules"
   ]
