--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@mui/x-data-grid": "^8.11.1",
     "axios": "^1.11.0",
     "next": "15.4.2",
     "next-auth": "^4.24.11",
