--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,10 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
+    "path": "^0.12.7",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
