--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,10 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.11.1",
+    "@stripe/react-stripe-js": "^4.0.2",
+    "@stripe/stripe-js": "^7.9.0",
     "axios": "^1.11.0",
+    "lodash": "^4.17.21",
     "next": "15.4.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
@@ -23,7 +26,10 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-pro-sidebar": "^0.7.1",
-    "react-sidebar": "^3.0.2"
+    "react-sidebar": "^3.0.2",
+    "recharts": "^3.2.1",
+    "socket.io-client": "^4.8.1",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
