--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
-    "react-pro-sidebar": "^0.7.1",
+    "react-pro-sidebar": "0.7.1",
     "react-sidebar": "^3.0.2",
     "recharts": "^3.2.1",
     "socket.io-client": "^4.8.1",
