--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
-
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -37,6 +36,7 @@
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "react-stripe-js": "^1.1.5",
+    "resend": "^6.1.2",
     "socket.io": "^4.8.1",
     "stripe": "^18.5.0",
     "ts-node-dev": "^2.0.0"
